opal-gwt-client/src/main/resources/org/obiba/opal/web/gwt/app/public/css/opal.css
/* General */

a:hover {
	cursor: pointer;
	text-decoration:underline;
}

.right-aligned {
  float: right;
}

.left-aligned {
  float: left;
}

.small-indent {
	margin-left: 10px;
}

.indent {
	margin-left: 20px;
}

.large-indent {
	margin-left: 30px;
}

.loading {
	display: block;
	margin: auto;	
}

.title {
  font-size: 1.3em;
}

/* Workbench */

.workbench .top {
	border-bottom:1px solid #BBBBBB;
    padding: 0.5em 0 0 1em;
    float: left;
}

.workbench .top .header {
    float: left;
    margin-right:20px;
}
  
.workbench .top .summary { 
    margin-top:0.25em;
}
    
.workbench .top .control {
    padding: 0.5em;
    float: left;
}
    
.workbench .top .control button {
    margin-left: 10px;
}

.workbench .main {
}

.workbench .main .title {
	font-weight: bold;
	font-size: 1em;
}

.workbench .main .p {
	padding: 10px;
}

.workbench .information .header {
	height: 2em;
}
	
.workbench .information .header img {
  cursor:pointer;
  padding-top: 5px;
  margin-right: 5px;
}

.workbench .information .header .gwt-MenuItem {
  cursor:default;
  padding-top: 5px;
}

.workbench .information .content {
  margin: 5px;
}

.workbench .information .title {
  font-weight: bold;
  font-size: 1em;
}

/* Dashboard */

.dashboard {
  padding: 0.5em 0 0 1em;
}

.dashboard .gwt-Label.title {
  font-weight: normal;
}

.dashboard div {
  margin-top:20px;
}

.dashboard .gwt-Label {
  font-weight: bold;
  display: inline;
}

.dashboard .gwt-Label.count {
  font-weight: normal;
}

.dashboard #shortcuts a:hover {
  text-decoration: none;
}

.dashboard #shortcuts a img {
  margin-right: 10px;
}

.dashboard #shortcuts a {
  font-weight: bold;
  color: #000000;
}

/* Variable browser */

.gwt-Tree .magma-datasource .gwt-TreeItem {
	background:transparent url(image/16/bundle.png) no-repeat scroll left center;
	padding-left:20px;
}

.gwt-Tree .magma-table .gwt-TreeItem {
	background:transparent url(image/16/table.png) no-repeat scroll left center;
	padding-left:20px;
}

.gwt-Tree .magma-view .gwt-TreeItem {
	background:transparent url(image/16/view.png) no-repeat scroll left center;
	padding-left:20px;
}

/*.gwt-Tree .selected {
	background-color: #bb5500;	
}

.gwt-Tree .magma-datasource.selected div {
	background-color: #ffffff;	
}

.gwt-Tree .magma-datasource.selected div.gwt-TreeItem-selected {
	background-color: #bb5500;	
}*/

.gwt-Tree .gwt-TreeItem-selected {
	font-weight: bold;
	/*color: #ffffff;*/
}

.navigator .gwt-MenuBar {
	background:none repeat scroll 0 0 #FFFFFF;
	border:0 none;
}

.navigator .gwt-MenuBar-horizontal .gwt-MenuItem {
	color:#666666;
	font-weight:bold;
	padding:0px;
	vertical-align:bottom;
}

.navigator .gwt-MenuBar-horizontal .gwt-MenuItemSeparator {
	padding-right:5px;
}

.navigator .gwt-MenuItem.tools {
	background:url("image/20/tools.png") no-repeat scroll left center transparent;
	height: 20px;
	width:25px;
}

.navigator .gwt-MenuItem.add {
	background:url("image/20/add-item.png") no-repeat scroll left center transparent;
	height: 20px;
	width:25px;
}

.navigator .gwt-MenuItem.edit {
	background:url("image/20/edit.png") no-repeat scroll left center transparent;
	height: 20px;
	width:25px;
}

.navigator .gwt-MenuItem.next {
	background:url("image/20/next.png") no-repeat scroll left center transparent;
	height: 20px;
	width:25px;
}

.navigator .gwt-MenuItem.next.disabled {
	background:url("image/20/next-disabled.png") no-repeat scroll left center transparent;
}

.navigator .gwt-MenuItem.previous {
	background:url("image/20/previous.png") no-repeat scroll left center transparent;
	height: 20px;
	width:25px;
}

.navigator .gwt-MenuItem.previous.disabled {
	background:url("image/20/previous-disabled.png") no-repeat scroll left center transparent;
}

.navigator .gwt-MenuItem.parent {
	background:url("image/20/up.png") no-repeat scroll left center transparent;
	height: 20px;
	width:25px;
}

.navigator .gwt-MenuItem.parent.disabled {
	background:url("image/20/up-disabled.png") no-repeat scroll left center transparent;
}

.gwt-MenuBar-vertical .gwt-MenuItem {
	color:#535353;
}

/* File Explorer Styles */ 
 
table.folder-details td:first-child span:hover {
  cursor: pointer;
}

.folder-details .folder {
	background:transparent url(image/16/folder.png) no-repeat scroll left center;
	padding-left:20px;
}

.folder-details .file {
	background:transparent url(image/16/document.png) no-repeat scroll left center;
	padding-left:20px;
}

.gwt-Tree .folder .gwt-TreeItem {
	background:transparent url(image/16/folder.png) no-repeat scroll left center;
	padding-left:20px;
}

.gwt-Tree .folder.expanded > table .gwt-TreeItem {
	background:transparent url(image/16/folder-visiting.png) no-repeat scroll left center;
	padding-left:20px;
}

/* Menu bar */ 

.gwt-MenuBar .gwt-MenuItem {
  cursor:pointer;
}

div.tableComparison-conflict {
	background:transparent url(image/20/error.png) no-repeat scroll left center;
	height:18px;
	width:150px;
}

div.tableComparison-creation {
	background:transparent url(image/20/list-add.png) no-repeat scroll left center;
	height:18px;
	width:150px;
}

div.tableComparison-modification {
	background:transparent url(image/20/edit.png) no-repeat scroll left center;
	height:18px;
	width:150px;
}

div.variableChanges {
  height:100%;
}

table.variableChangesDetails {
  width:100%;
  table-layout:fixed;
}

table.variableChangesDetailsVert table.variableChangesDetails tr > td  {
  text-align:left; 
}


table.variableConflictsDetailsVert table.variableChangesDetails tr > td  {
  text-align:left; 
}

table.variableChangesDetailsVert tr > td {
  text-align:right;
  white-space:nowrap;
  width:100%;
}

table.variableConflictsDetailsVert tr > td {
  text-align:right;
  white-space:nowrap;
  width:100%;
}

div.ignoreAllModifications {
  padding:10px 10px 2px;
}

div.ignoreAllModifications > span > label {
  padding-left:10px;
  font-weight:bold;
}

div.variableChangesSummaryPanel > div {
  font-weight:bold;
  margin:5px;
}

div.variableChanges {
  margin:10px;
  height:600px;
}

